--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
   </section>  
 
 
-  <footer id="footer">
-    <a href="https://www.linkedin.com/in/maneprajakta/" target="_blank"><i class="social-media-icons fab fa-2x fa-linkedin"></i></a>
-    <a href="https://github.com/maneprajakta" target="_blank"><i class="social-media-icons fab fa-2x fa-github" aria-hidden="true"></i></i></a>
+  <footer class="mt-5">
+    <p>Desarrollado con ❤️ y TensorFlow.js</p>
   </footer>
 
   <script src="js/main.js" charset="utf-8"></script>
