--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
           </div>
 
           <div class="buttons_div">
-            <button type="button" class="btn btn-dark" id="predict_button">Predict</button>
-            <button type="button" class="btn btn-dark" id="clear_button">&nbsp Clear &nbsp</button>
+            <button type="button" class="btn btn-dark" id="predict_button">Predecir</button>
+            <button type="button" class="btn btn-dark" id="clear_button">&nbsp Borrar &nbsp</button>
           </div>
         </div>
 
         <div class="predicted_answer col-sm-6">
-          <h2 id="prediction_heading">Prediction</h2>
+          <h2 id="prediction_heading">Prediccion:</h2>
           <h1 id="result">-</h1>
-          <p id="confidence">Confidence: -</p>
+          <p id="confidence">Porcentaje: -</p>
         </div>
       </div>
     </div>
