--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="predicted_answer col-sm-6">
           <h2 id="prediction_heading">Prediccion:</h2>
           <h1 id="result">-</h1>
-          <p id="es un:">Porcentaje: -</p>
+          <p id="confidence">Porcentaje: -</p>
         </div>
       </div>
     </div>
